Prevent button text from wrapping
Fixes DD 71427 385

--- a/app/design/frontend/Travers/default/styles/blocks/_bluefoot.scss
+++ b/app/design/frontend/Travers/default/styles/blocks/_bluefoot.scss
@@ -821,6 +821,10 @@ $home-sidebar-width: 240px;
             }
         }
 
+        .pagebuilder-button-secondary {
+            white-space: nowrap;
+        }
+
         .footer-promo-header {
             margin-top: 0;
             font-size: 22px;
